// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generated AppMain creates React elements with correct structure 1`] = `
<div
  id="app"
>
  <div
    id="app.Page1"
  >
    <style
      dangerouslySetInnerHTML={
        Object {
          "__html": ".css-d3wcwz-MuiTypography-root{margin:0;font-family:\\"Roboto\\",\\"Helvetica\\",\\"Arial\\",sans-serif;font-weight:400;font-size:1rem;line-height:1.5;letter-spacing:0.00938em;margin-bottom:0.35em;}",
        }
      }
      data-emotion="css d3wcwz-MuiTypography-root"
    />
    <p
      className="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
      id="app.Page1.t1"
    >
      Hi there!
    </p>
    <style
      dangerouslySetInnerHTML={
        Object {
          "__html": ".css-d3wcwz-MuiTypography-root{margin:0;font-family:\\"Roboto\\",\\"Helvetica\\",\\"Arial\\",sans-serif;font-weight:400;font-size:1rem;line-height:1.5;letter-spacing:0.00938em;margin-bottom:0.35em;}",
        }
      }
      data-emotion="css d3wcwz-MuiTypography-root"
    />
    <p
      className="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
      id="app.Page1.t2"
    >
      4
    </p>
  </div>
</div>
`;

exports[`generated Page creates React element with correct structure 1`] = `
<div
  id="app.Page1"
>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": ".css-d3wcwz-MuiTypography-root{margin:0;font-family:\\"Roboto\\",\\"Helvetica\\",\\"Arial\\",sans-serif;font-weight:400;font-size:1rem;line-height:1.5;letter-spacing:0.00938em;margin-bottom:0.35em;}",
      }
    }
    data-emotion="css d3wcwz-MuiTypography-root"
  />
  <p
    className="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
    id="app.Page1.t1"
  >
    Hi there!
  </p>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": ".css-d3wcwz-MuiTypography-root{margin:0;font-family:\\"Roboto\\",\\"Helvetica\\",\\"Arial\\",sans-serif;font-weight:400;font-size:1rem;line-height:1.5;letter-spacing:0.00938em;margin-bottom:0.35em;}",
      }
    }
    data-emotion="css d3wcwz-MuiTypography-root"
  />
  <p
    className="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
    id="app.Page1.t2"
  >
    4
  </p>
</div>
`;
